# skills-auditor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly-audit.yml
launchd/: com.thehobbyist.skills-auditor.plist
skills_auditor/: cli.py  detectors.py  reporter.py  scanner.py
workflow-templates/: audit-on-skill-change.yml
